# carousel

./: .gitignore  README.md  REFERENCES.bib  cmd.spec  gui.spec  justfile  pyproject.toml  requirements.txt  shell.nix
src/: cmd.py  gui.py  main.py
src/carousel/: __init__.py  brute.py  def_acc.py
src/cgi/: carousel.py  default.env  form.html
test/: galeshapley_test.py
test/nbs/: hovses.py
